--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,34 +27,192 @@
 .App-link {
   color: #61dafb;
 }
+
 /* Navbar */
 .navbar-nav .nav-link {
   font-size: 16px;
   margin-right: 100px;
+
 }
+
 .navbar-nav .nav-link:hover {
-  color: blue;
+  color: #87CEFA;
+}
+
+.navbar-nav .nav-link {
+  color: #fff;
 }
 
 .navbar-brand {
-  margin-left:30px;
+  margin-left: 50px;
 }
-
 
 /*----------------------*/
 
 /*Footer*/
 footer {
-  font-size:17px;
+  font-size: 17px;
+}
+
+/*Register form */
+.error-message {
+    position: fixed;
+    display: flex;
+    color: red;
+}
+
+.hidden {
+  display: none;
+}
+
+/*Account-info page---------------------------------*/
+/*Card---*/
+.Card {
+  margin-bottom: 10px;
+  position: relative;
+  padding: 10px;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s;
+}
+
+.Card:hover {
+  background-color: #000;
+  color: #fff;
+}
+
+.Card-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.Card-text {
+  color: #000;
+  font-weight: bold;
+}
+
+.Card-arrow {
+  color: #000;
+  font-size: 18px;
+}
+
+.Card:hover .Card-text {
+  color: #fff;
+}
+
+.Card:hover .Card-arrow {
+  color: #fff;
+}
+
+/*Card button */
+.Card-button {
+  font-size: 20px;
+  border-radius: 20px;
+  width: 200px;
+  /* Điều chỉnh kích thước của nút */
+  height: 50px;
+}
+
+.Card-button-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.Card-button:hover {
+  background-color: #eee;
+  color: black;
+}
+
+/*table*/
+.table-container {
+  display: flex;
+  justify-content: center;
+}
+
+.custom-table {
+  width: 75%;
+  /* Chiếm 3/4 của phần tử chứa bảng */
+  border-collapse: collapse;
+  font-size: 18px;
+}
+
+.custom-table th,
+.custom-table td {
+  padding: 8px;
+  text-align: left;
+  border: none;
+  /* Bỏ viền của các ô trong bảng */
 }
 
 
+.custom-table td:first-child {
+  width: 40%;
+  /* Chiếm 30% của ô d */
+}
 
+.custom-table tr:not(:last-child) {
+  margin-bottom: 10px;
+  /* Khoảng cách giữa các dòng */
+}
+
+/*avatar*/
+.avatar-circle {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  background-color: #ccc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.avatar-circle i {
+  font-size: 100px;
+  color: white;
+}
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.3s;
+  cursor: pointer;
+}
+
+.overlay-label {
+  color: white;
+  font-weight: bold;
+}
+
+.avatar-circle:hover .overlay {
+  opacity: 1;
+}
+
+select.form-select {
+  border-radius: 20px;
+}
+
+/*-----------------------------------------------*/
+
+/*Activation form---*/
+.centered-input {
+  text-align: center;
+}
 
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
