--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -47,6 +47,28 @@
   margin-left: 50px;
 }
 
+
+
+.dropdown-toggle:hover {
+  background-color: #f2f2f2;
+  color: #000;
+}
+
+.dropdown-item:hover {
+  background-color: #f2f2f2;
+  color: #000;
+}
+
+.dropdown-toggle:hover + .dropdown-menu,
+.dropdown-menu:hover {
+  
+  display: block;
+}
+
+.dropdown-menu {
+  display: none;
+}
+
 /*----------------------*/
 
 /*Footer*/
@@ -209,10 +231,7 @@ select.form-select {
   width: 50%;
 }
 
-.custom-card {
-  width: 33%; 
-  margin: 0 auto;
-}
+
 
 @keyframes App-logo-spin {
   from {
